--- a/assets/css/mulch.css
+++ b/assets/css/mulch.css
@@ -40,3 +40,80 @@ pre.references {
   height: 300px; /* Example height for the parent */
   border: 1px solid gray; /* Just for visualization */
 }
+/* CSS FOR HEALTH RISKS PAGE */
+.nav-button {
+  transition: all 0.3s ease;
+}
+.nav-button.active {
+  background-color: #A67B5B;
+  color: #FFFFFF;
+  font-weight: 600;
+}
+.nav-button:not(.active):hover {
+  background-color: #EFEBE7;
+}
+.content-section {
+  display: none;
+}
+.content-section.active {
+  display: block;
+}
+.chart-container {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+  max-height: 400px;
+}
+@media (min-width: 768px) {
+  .chart-container {
+      height: 350px;
+  }
+}
+.flowchart-step {
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.flowchart-step:hover, .flowchart-step.active {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  border-color: #A67B5B;
+}
+.pathway-item:hover .pathway-tooltip {
+  opacity: 1;
+  visibility: visible;
+}
+/*IFRAME CSS*/
+.custom-ratio {
+  --bs-aspect-ratio: 70%;
+}
+
+/* END OF THE CSS FOR HEALTH RISKS PAGE */
+/* adding backgournd image overlay image */
+.hero-section {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.section-overlay {
+  background: rgba(0, 0, 0, 0) linear-gradient(rgba(39, 48, 83, 0.01) 0%, rgb(39, 48, 83) 100%) repeat scroll 0% 0%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.bg-deep-blue {
+  background-color: #005bea;
+  color: white; /* optional for contrast */
+}
+.text-container {
+  position: relative;
+  z-index: 22;
+}
