--- a/assets/css/risks.css
+++ b/assets/css/risks.css
@@ -2,7 +2,7 @@
  * Base custom styles
  */
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'fatima', sans-serif;
     /* #FDFBF8 is a very light off-white */
     background-color: #FDFBF8; 
     /* #404040 is a dark gray */
