--- a/sass/main.css
+++ b/sass/main.css
@@ -25,7 +25,7 @@ Table of Index
 body {
   position: relative;
   font-size: 14px;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "fatima", sans-serif;
   letter-spacing: 0.5px;
   background-color: #ffffff;
 }
