--- a/assets/css/social_icons.css
+++ b/assets/css/social_icons.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('/assets/fonts/icomoon.eot');
-  src:  url('/assets/fonts/icomoon.eot') format('embedded-opentype'),
-    url('/assets/fonts/icomoon.ttf') format('truetype'),
-    url('/assets/fonts/icomoon.woff') format('woff'),
-    url('/assets/fonts/icomoon.svg') format('svg');
+  font-family: 'social_icons';
+  src:  url('/assets/fonts/social_icons.eot');
+  src:  url('/assets/fonts/social_icons.eot') format('embedded-opentype'),
+    url('/assets/fonts/social_icons.ttf') format('truetype'),
+    url('/assets/fonts/social_icons.woff') format('woff'),
+    url('/assets/fonts/social_icons.svg') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: 'social_icons' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
