--- a/assets/css/LineIcons.css
+++ b/assets/css/LineIcons.css
@@ -1,24 +1,23 @@
 @font-face {
   font-family: 'LineIcons';
-  src: url('/assets/fonts/LineIcons.eot');
-  src: url('/assets/fonts/LineIcons.eot?#iefix') format('embedded-opentype'),
-       url('/assets/fonts/LineIcons.woff2') format('woff2'),
-       url('/assets/fonts/LineIcons.woff') format('woff'),
-       url('/assets/fonts/LineIcons.ttf') format('truetype'),
-       url('/assets/fonts/LineIcons.svg#LineIcons') format('svg');
+  src: url('../fonts/LineIcons.eot');
+  src: url('../fonts/LineIcons.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/LineIcons.woff2') format('woff2'),
+       url('../fonts/LineIcons.woff') format('woff'),
+       url('../fonts/LineIcons.ttf') format('truetype'),
+       url('../fonts/LineIcons.svg#LineIcons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 .lni {
-  font-family: 'LineIcons';
+  font-family: 'LineIcons' !important;
   font-style: normal;
   font-weight: normal;
-  speak: none;
   display: inline-block;
   text-decoration: inherit;
   text-align: center;
   line-height: 1;
-  color: #ffffff;
+  color: aliceblue;
 }
