--- a/assets/css/LineIcons.css
+++ b/assets/css/LineIcons.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'LineIcons';
-  src: url('../fonts/LineIcons.eot');
-  src: url('../fonts/LineIcons.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/LineIcons.woff2') format('woff2'),
-       url('../fonts/LineIcons.woff') format('woff'),
-       url('../fonts/LineIcons.ttf') format('truetype'),
-       url('../fonts/LineIcons.svg#LineIcons') format('svg');
+  src: url('/assets/fonts/LineIcons.eot');
+  src: url('/assets/fonts/LineIcons.eot?#iefix') format('embedded-opentype'),
+       url('/assets/fonts/LineIcons.woff2') format('woff2'),
+       url('/assets/fonts/LineIcons.woff') format('woff'),
+       url('/assets/fonts/LineIcons.ttf') format('truetype'),
+       url('/assets/fonts/LineIcons.svg#LineIcons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -19,5 +19,5 @@
   text-decoration: inherit;
   text-align: center;
   line-height: 1;
-  color: aliceblue;
+  color: rgba(230, 0, 0, 0.959);
 }
